[project]
name = "hanaro"
version = "0.0.0"
description = "A non-invasive `logging` configurator and facilitator."
keywords = ["logging", "configuration", "appsettings2", "async"]
authors = [
    { name="Shaun Wilson", email="mrshaunwilson@msn.com" }
]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
requires-python = ">=3.12"
dependencies = [
    "appsettings2>=1.3.3"
]

[project.optional-dependencies]
dev = [
    "mypy",
    "punit>=1.2.10",
    "twine"
]

[project.urls]
Documentation = "https://hanaro.readthedocs.io/"
Homepage = "https://github.com/wilson0x4d/hanaro"
Repository = "https://github.com/wilson0x4d/hanaro.git"

[build-system]
requires = ["setuptools", "twine"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
exclude = [
    "docs",
    "tests",
    "tests.*"
]

[tool.setuptools.package-data]
"hanaro" = ["py.typed"]
